# Hyve-Engine

./: CMakeLists.txt  Package.resolved  Package.swift  build_engine.bat  test.cxx  vcpkg.json
core/engine/: CMakeLists.txt
core/engine/audio/: CMakeLists.txt
core/engine/crypto/: CMakeLists.txt
core/engine/crypto/include/crypto/: Bridge_Crypto.h
core/engine/crypto/src/: Bridge_Crypto.cxx
core/engine/ecs/include/ecs/: Bridge_ECS.h  EntityRegistry.hxx
core/engine/ecs/src/: Bridge_ECS.cxx  EntityRegistry.cxx
core/engine/input/: CMakeLists.txt
core/engine/input/src/: Input.cxx
core/engine/io/: CMakeLists.txt
core/engine/io/include/io/: IO.hxx
core/engine/io/include/io/filesystem/: FileHandle.hxx  FileSystem.hxx
core/engine/io/src/: Bridge_IO.cxx  IO.cxx
core/engine/io/src/filesystem/: FileSystem.cxx
core/engine/physics/: CMakeLists.txt
core/engine/physics/include/physics/: Bridge_Physics.h  CharacterController.hxx  Physics.hxx
core/engine/physics/src/: Bridge_Physics.cxx  Physics.cxx
core/engine/rendering/include/rendering/: CommandList.hxx  Device.hxx  GraphicsContext.hxx  Material.hxx  Rendering.hxx  Texture.hxx  Vertex.hxx  VertexArray.hxx
core/engine/rendering/include/rendering/opengl/: GlCommandList.hxx  GlDevice.hxx  GlIndexBuffer.hxx  GlMaterial.hxx  GlTexture.hxx  GlVertexArray.hxx  GlVertexBuffer.hxx
core/engine/rendering/src/: Bridge_Rendendering.cxx  GraphicsContext.cxx  Rendering.cxx
core/engine/rendering/src/opengl/: GlCommandList.cxx  GlCommandQueue.cxx  GlDevice.cxx  GlIndexBuffer.cxx  GlVertexBuffer.cxx
core/engine/shared/include/shared/: Handle.hxx
core/engine/system/src/: Bridge_System.cxx
meta/: TransformComponent.ecs
reflection/: MoveCompone.json  MoveComponent.json  Play.json  PlayerComponent.json  SpriteComponent.json  TransformComponent.json
scripting/bridge/include/: Bridge_IO.h  Bridge_Input.h  Bridge_Rendering.h
scripting/engine/: Kyanite.swift
scripting/engine/ecs/: Entity.swift
scripting/engine/ecs/builtin/components/: MaterialComponent.swift  SpriteComponent.swift  TransformComponent.swift
scripting/engine/ecs/builtin/systems/: HierarchySystem.swift  InputSystem.swift  RenderSystem.swift
scripting/engine/eventsystem/: EventSystem.swift
scripting/engine/eventsystem/events/: KeyEvent.swift
scripting/engine/input/: ButtonState.swift  Input.swift  KeyboardKey.swift
scripting/engine/math/: Matrix4x4.swift  Vector3.swift
scripting/engine/rendering/: Material.swift  Renderer.swift  Shader.swift  Texture.swift
scripting/engine/resources/: ResourceManager.swift  TrackedResource.swift
scripting/engine/scenemanagement/: Scene.swift  SceneManager.swift
scripting/engine/templates/: MaterialTemplate.swift
scripting/engine/tests/: MoveComponent.swift  MovementSystem.swift  PlayerComponent.swift  PlayerSystem.swift
scripting/macros/: ScriptingMacro.swift
scripting/native/audio/: NativeAudio.swift
scripting/native/ecs/: NativeECS.swift
scripting/native/input/: NativeInput.swift
scripting/native/io/: NativeIO.swift
scripting/native/rendering/: NativeRendering.swift
scripting/native/system/: NativeSystem.swift
templates/schemes/: material.json
tooling/: CMakeLists.txt
tooling/bundler/: CMakeLists.txt
tooling/bundler/include/bundler/: Bundle.hxx
tooling/bundler/src/: bundler.cxx
